<resources>
    <string name="app_name">Tienda</string>
    <string name="pedido">Togpe4</string>
    <string name="buscar">Togpe3</string>
    <string name="listar">Togpe5</string>

    <string name="action_settings">Action</string>

    <string name="dummy_content">Contenido en actualizacion</string>
    <string name="boton_agregar">Añadir</string>
    <string name="titulo_agregar">Nombre:</string>
    <string name="label_Id">Numero de Identificacion:</string>
    <string name="label_nombre">Nombre Articulo:</string>
    <string name="label_FamiliaId">Familia Identificacion:</string>
    <string name="label_Marca">Marca:</string>
    <string name="label_Modelo">Modelo:</string>
    <string name="label_Proveedores">Proveedores:</string>
    <string name="label_Costo">Costo:</string>
    <string name="label_UbicacionAlmacen">Ubicacion Almacen:</string>
    <string name="label_PiezasMax">Piezas Maximas:</string>
    <string name="label_PiezasMin">Piezas Minimas:</string>
    <string name="msgProveedores">Selecciona proveedores:</string>
    <string name="NUEVO">NUEVO</string>
    <string name="ProveedoresSel">Selecciona. . .</string>
    <string name="boton_nuevo">NUEVO</string>
    <string name="boton_modificar">GUARDAR</string>
    <string name="boton_consultar">CONSULTAR</string>
    <string name="label_Modificar">Modificar Articulo</string>
    <string name="label_Agregar">Agregar Articulo</string>
    <string name="Activo">Activo</string>
    <string name="label_AgregarProveedores">Agregar Proveedores</string>
    <string name="label_nombreProveedor">Nombre Proveedor:</string>
    <string name="label_Ciudad">Ciudad:</string>
    <string name="label_Estado">Estado:</string>
    <string name="label_Pais">Pais:</string>
    <string name="label_Direccion">Direccion:</string>
    <string name="label_Telefono">Telefono:</string>
    <string name="label_ModificarProveedores">Modificar Proveedores</string>
    <string name="ModificarExito">El registro se modifico correctamente</string>
    <string name="ModificarFallo">Fallo al modificar el registro!</string>
    <string name="ValoresInvalidos">Ingresa todos los valores validos!!!</string>
    <string name="IDIngresaInvalido">El ID ingresado es invalido!</string>
    <string name="IDDiferente">El ID ingresado no corresponde al consultado!</string>
    <string name="IngresaNombre">Ingresa el campo nombre!</string>
    <string name="ModeloErroneo">Modelo existente o Campo vacio!</string>
    <string name="PiezasError">Piezas minimas no pueden ser mayor a maximas y las piezas no pueden ser 0!</string>
    <string name="CostoInvalido">El costo no puede ser 0</string>
    <string name="ArticuloCargaExitosa">Articulo cargado!</string>
    <string name="ArticuloCargaErronea">El articulo ingresa esta corrupto!</string>
    <string name="IDIngresadoNoExiste">El ID ingresa no existe!</string>
    <string name="RegistroExitoso">El registro fue agregado con exito!</string>
    <string name="RegistroFallo">Fallo al insertar el registro!</string>
    <string name="CamposListos">Campos listos para un nuevo registro!</string>
    <string name="ProveedorCargaExitosa">Proveedor cargado con exito!</string>
    <string name="ProveedorCargaErronea">Proveedor con valores corruptos!</string>
    <string name="ProveedorExistente">El proveedor ingresado ya existe!</string>
    <string name="borrar">borrar</string>
    <string name="label_Cantidad">Cantidad:</string>
    <string name="CantidadError">La cantidad no puede ser menor a 0 ni mayor al Maximo</string>
    <string name="filtro1">ID</string>
    <string name="filtro2">Marca</string>
    <string name="NoArticulos">NO EXISTEN ARTICULOS GUARDADOS!</string>
    <string name="filtro2Proveedores">Nombre</string>
    <string name="label_Listar">Listar Articulos</string>
    <string name="label_ListarProveedores">Listar Proveedores</string>
    <string name="NoProveedores">No existen proveedores!</string>
    <string name="NombreErroneo">El nombre ingresado ya existe o campo vacio!</string>
    <string name="ArticuloCritico">Articulo %s en valor minimo!</string>
    <string name="label_Pedido">Pedido Articulo</string>
    <string name="label_Venta">Salida Articulos</string>
    <string name="label_CantidadPedir">Cantidad a pedir:</string>
    <string name="boton_pedir">Pedir</string>
    <string name="label_Stock">Cantidad Stock</string>
    <string name="boton_venta">Salida</string>
    <string name="CantidadPiezasError">La cantidad no puede ser mayor a el maximo ni menor al minimo!</string>
    <string name="ErrorActualizar">Error, no se pudo actualizar el Articulo</string>
    <string name="label_CantidadActual">Cantidad Actual:</string>
    <string name="ArticuloSinProveedores">El articulo no tiene proveedores para hacer pedido, Agregalos y vuelve a reingresar el ID</string>
    <string name="CostoDesactualizado">El costo del articulo fue cambiado, vuelve a ingresar el articulo para actualizar</string>
    <string name="OutStockArticulo">El pedido no puede ser concretado con el stock actual, deficiencia de producto</string>
    <string name="VentaExitosa">La transaccion fue completada!</string>
    <string name="ErrorVenta">La venta contuvo errores y se cancelo</string>
</resources>
