<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".act1" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_Agregar"
                android:id="@+id/textViewagregar"
                android:layout_centerHorizontal="true"
                android:textSize="30dp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Id"
                android:id="@+id/label_Id"
                android:width="150dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_below="@id/textViewagregar"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/label_nombre" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_Id"
                android:editable="false"
                android:enabled="false"
                android:numeric="integer"
                android:inputType="number"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:textStyle="normal"
                android:width="120dp"
                android:text="0"
                android:layout_below="@id/textViewagregar"
                android:layout_marginLeft="29dp"
                android:layout_toRightOf="@+id/label_Id" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre"
                android:id="@+id/label_nombre"
                android:layout_below="@+id/label_Id"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="29dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_alignRight="@+id/label_FamiliaId" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_nombre"
                android:textIsSelectable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="text"
                android:lines="1"
                android:editable="true"
                android:width="120dp"
                android:layout_alignTop="@+id/label_nombre"
                android:layout_alignLeft="@+id/agregar_Id" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_FamiliaId"
                android:id="@+id/label_FamiliaId"
                android:layout_below="@+id/label_nombre"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="29dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_alignRight="@+id/label_Marca" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Marca"
                android:id="@+id/label_Marca"
                android:layout_below="@+id/label_FamiliaId"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="29dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_alignRight="@+id/label_Modelo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Modelo"
                android:id="@+id/label_Modelo"
                android:layout_marginTop="50dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_below="@+id/label_Marca"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_Modelo"
                android:textIsSelectable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="text"
                android:lines="1"
                android:editable="true"
                android:width="120dp"
                android:layout_alignTop="@+id/label_Modelo"
                android:layout_alignLeft="@+id/agregar_nombre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Proveedores"
                android:id="@+id/label_Proveedores"
                android:layout_marginTop="23dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_below="@+id/agregar_Modelo"
                android:layout_alignParentLeft="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Costo"
                android:id="@+id/label_Costo"
                android:layout_marginTop="21dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_below="@+id/agregar_Proveedores"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_Costo"
                android:textIsSelectable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:text="0.00"
                android:lines="1"
                android:editable="true"
                android:width="120dp"
                android:layout_alignTop="@+id/label_Costo"
                android:layout_alignLeft="@+id/agregar_Modelo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_UbicacionAlmacen"
                android:id="@+id/label_UbicacionAlmacen"
                android:layout_marginTop="24dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_below="@+id/agregar_Costo"
                android:layout_toLeftOf="@+id/agregar_Id" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_UbicacionAlmacen"
                android:textIsSelectable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="text"
                android:lines="1"
                android:editable="true"
                android:width="120dp"
                android:layout_alignTop="@+id/label_UbicacionAlmacen"
                android:layout_alignLeft="@+id/agregar_Costo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_PiezasMax"
                android:id="@+id/label_PiezasMax"
                android:layout_below="@+id/label_UbicacionAlmacen"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="29dp"
                android:width="120dp"
                android:textSize="18sp"
                android:layout_toLeftOf="@+id/agregar_Id" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_PiezasMax"
                android:textIsSelectable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="number"
                android:text="0"
                android:lines="1"
                android:editable="true"
                android:width="120dp"
                android:layout_alignTop="@+id/label_PiezasMax"
                android:layout_alignLeft="@+id/agregar_UbicacionAlmacen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_PiezasMin"
                android:id="@+id/label_PiezasMin"
                android:layout_below="@+id/label_PiezasMax"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="29dp"
                android:layout_toLeftOf="@+id/agregar_Id"
                android:width="120dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_PiezasMin"
                android:textIsSelectable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="number"
                android:text="0"
                android:lines="1"
                android:editable="true"
                android:width="120dp"
                android:layout_alignTop="@+id/label_PiezasMin"
                android:layout_alignLeft="@+id/agregar_PiezasMax" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Cantidad"
                android:id="@+id/label_Cantidad"
                android:layout_below="@+id/agregar_PiezasMin"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="29dp"
                android:layout_toLeftOf="@+id/agregar_Id"
                android:width="120dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_Cantidad"
                android:textIsSelectable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:inputType="number"
                android:text="0"
                android:lines="1"
                android:editable="true"
                android:width="120dp"
                android:layout_alignTop="@+id/label_Cantidad"
                android:layout_alignLeft="@+id/agregar_PiezasMin" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_agregar"
                android:id="@+id/boton_agregar"
                android:layout_alignTop="@+id/agregar_Cantidad"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_Marca"
                android:spinnerMode="dialog"
                android:width="120dp"
                android:layout_alignTop="@+id/label_Marca"
                android:layout_alignLeft="@+id/agregar_nombre"
                android:layout_alignRight="@+id/agregar_Modelo" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_Familia"
                android:width="120dp"
                android:layout_alignTop="@+id/label_FamiliaId"
                android:layout_alignLeft="@+id/agregar_nombre"
                android:layout_alignRight="@+id/agregar_nombre" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agregar_Proveedores"
                android:layout_alignTop="@+id/label_Proveedores"
                android:layout_alignLeft="@+id/agregar_Costo"
                android:text="@string/ProveedoresSel" />

        </RelativeLayout>
    </LinearLayout>

    </ScrollView>
</RelativeLayout>
