<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".act1" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_ModificarProveedores"
                    android:id="@+id/textViewmodificarProveedores"
                    android:layout_centerHorizontal="true"
                    android:textSize="30dp"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_IdProveedor"
                    android:width="150dp"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_below="@+id/textViewmodificarProveedores"
                    android:layout_alignRight="@+id/label_nombre"
                    android:text="@string/label_Id"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="12dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificar_IdProveedor"
                    android:numeric="integer"
                    android:inputType="number"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:textStyle="normal"
                    android:width="120dp"
                    android:text="0"
                    android:layout_alignTop="@+id/label_IdProveedor"
                    android:layout_alignRight="@+id/textViewmodificarProveedores" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_nombreProveedor"
                    android:id="@+id/label_nombreProveedor"
                    android:layout_below="@+id/label_IdProveedor"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="29dp"
                    android:width="120dp"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificar_nombreProveedor"
                    android:textIsSelectable="false"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:inputType="text"
                    android:lines="1"
                    android:editable="true"
                    android:width="120dp"
                    android:layout_alignTop="@+id/label_nombreProveedor"
                    android:layout_alignLeft="@+id/modificar_IdProveedor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Ciudad"
                    android:id="@+id/label_CiudadProveedor"
                    android:layout_marginTop="29dp"
                    android:width="120dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/label_nombreProveedor"
                    android:layout_alignParentLeft="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificar_ciudadProveedor"
                    android:textIsSelectable="false"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:inputType="text"
                    android:lines="1"
                    android:editable="true"
                    android:width="120dp"
                    android:layout_alignTop="@+id/label_CiudadProveedor"
                    android:layout_alignLeft="@+id/modificar_nombreProveedor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Estado"
                    android:id="@+id/label_estadoProveedor"
                    android:width="120dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/modificar_ciudadProveedor"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="29dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificar_estadoProveedor"
                    android:textIsSelectable="false"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:inputType="text"
                    android:lines="1"
                    android:editable="true"
                    android:width="120dp"
                    android:layout_alignTop="@+id/label_estadoProveedor"
                    android:layout_alignLeft="@+id/modificar_ciudadProveedor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Pais"
                    android:id="@+id/label_paisProveedor"
                    android:width="120dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/modificar_estadoProveedor"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="29dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificar_paisProveedor"
                    android:textIsSelectable="false"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:inputType="text"
                    android:lines="1"
                    android:editable="true"
                    android:width="120dp"
                    android:layout_alignTop="@+id/label_paisProveedor"
                    android:layout_alignLeft="@+id/modificar_ciudadProveedor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Direccion"
                    android:id="@+id/label_direccionProveedor"
                    android:width="120dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/modificar_paisProveedor"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="29dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificar_direccionProveedor"
                    android:textIsSelectable="false"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:inputType="text"
                    android:lines="1"
                    android:editable="true"
                    android:width="120dp"
                    android:layout_alignTop="@+id/label_direccionProveedor"
                    android:layout_alignLeft="@+id/modificar_paisProveedor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Telefono"
                    android:id="@+id/label_telefonoProveedor"
                    android:width="120dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/modificar_direccionProveedor"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="29dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificar_telefonoProveedor"
                    android:textIsSelectable="false"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:inputType="number"
                    android:lines="1"
                    android:editable="true"
                    android:width="120dp"
                    android:layout_alignTop="@+id/label_telefonoProveedor"
                    android:layout_alignLeft="@+id/modificar_direccionProveedor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Activo"
                    android:id="@+id/label_ActivoProveedor"
                    android:layout_below="@+id/modificar_telefonoProveedor"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="29dp"
                    android:width="120dp"
                    android:textSize="18sp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modificarActivoProveedor"
                    android:layout_alignTop="@+id/label_ActivoProveedor"
                    android:layout_alignRight="@+id/modificar_telefonoProveedor" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_modificar"
                    android:id="@+id/boton_modificarProveedor"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/modificarActivoProveedor"
                    android:layout_alignParentLeft="false"
                    android:layout_marginTop="29dp"
                    android:layout_alignParentRight="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_consultar"
                    android:id="@+id/boton_consultarProveedor"
                    android:layout_alignLeft="@+id/label_ActivoProveedor"
                    android:layout_marginTop="29dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="false" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
